--- a/wireframe.css
+++ b/wireframe.css
@@ -6,7 +6,6 @@
 
 body {
     text-align: center;
-    margin: 10px;
 }
 
 .hide {
@@ -22,7 +21,7 @@ body {
 }
 
 /*header CSS*/
-.startHeader, .navHeader {
+header {
     display: inline-flex;
     border-bottom: 3px solid black;
     justify-content: space-around;
@@ -30,20 +29,15 @@ body {
     font-size: 18px;
     margin: 10px;
     padding: 10px;
-}
-
-.startHeader a, .navHeader a {
-    font-size: 14px;
-    color: blue;
-    text-decoration: underline;
-}
-
-.navHeader {
-    margin: 0;
-    padding: 10px;
     height: 50px;
     left: 0;
     top: 0;
+}
+
+a{
+    font-size: 14px;
+    color: blue;
+    text-decoration: underline;
 }
 
 /*main body css*/
@@ -51,16 +45,20 @@ main {
     text-align: center;
 }
 
-
 /*start page CSS*/
 h1 {
-    margin: 10px;
+    margin: 60px 10px 10px;
     padding: 10px;
 }
 
 .intro {
     margin: 20px;
     padding: 15px;
+}
+
+.startImage {
+    height: 150px;
+    width: 150px;
 }
 
 .buttons {
@@ -77,6 +75,15 @@ h1 {
     padding: 15px;
     border-radius: 10px;
 }
+
+
+
+
+
+
+
+
+
 
 /*portfolio CSS*/
 .techList {
@@ -135,9 +142,24 @@ h1 {
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
 /*about me page CSS*/
-.aboutMe {
+.heading {
+    font-size: 20px;
     margin: 5px;
+}
+.aboutMe {
+    margin: 25px 15px 0;
     padding: 10px;
 }
 
@@ -145,6 +167,10 @@ h1 {
     border: 2px solid black;
     padding: 10px;
     font-size: 14px;
+}
+
+.contact {
+    margin: 30px 15px 0;
 }
 
 .socialMediaLinks {
@@ -158,7 +184,6 @@ h1 {
     text-decoration: underline;
 }
 
-
 /*footer CSS*/
 footer{
     text-align: center;
@@ -171,54 +196,75 @@ footer a{
     text-decoration: underline;
 }
 
-@media only screen and (min-width: 600px) {
-    body {
-        margin: 10px auto 0;
+
+/*Tablet Breakpoint*/
+@media only screen and (min-width: 480px) {
+    .intro {
+        margin: 80px;
+    }
+
+    .buttons {
+        margin: 50px;
+    }
+
+    .bio {
+        margin: 50px 20px 35px;
+        border: none;
+   }
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
+/*Laptop Breakpoint*/
+@media only screen and (min-width: 768px) { 
+    h1 {
+        text-align: center;
+        margin: 75px 10px;
+    }
+
+    .buttons {
+        margin: 75px 5px;
+        padding: 25px;
+        flex-direction: row;
+        justify-content: space-evenly;
     }
     
-    .startHeader{
+    header{
         font-size: 20px;
         border: none;
         margin: 30px 50px 50px;
     }
 
-    .startHeader a {
-        display: none;
-    }
-
-    h1 {
-        text-align: center;
-
-    }
-
-    .buttons {
-        margin: 130px 15px 0;
-        padding: 25px;
-        flex-direction: row;
-        justify-content: space-evenly;
-
-    }
-
     .intro {
-        margin: 20px;
+        margin: 75px;
         padding: 15px;
         font-size: 18px;
     }
+
+    .startimage {
+        height: 200px;
+        width: 200px;
+        padding: 50px;
+    }
  
     .startButton {
-        margin: 30px auto 0;
+        margin: 15px auto;
         width: 30%;
         height: 75px;
     }
-
-    .startImage {
-        height: 50%;
-        position: absolute;
-        top: 325px;
-    }
-
+ 
     /*navbar Query*/
-    .navHeader{
+    header{
         background: lightgray;
         width: 100%;
         position: fixed;
@@ -233,10 +279,19 @@ footer a{
         top: 15px;
     }
 
-    .navHeader a {
+    header a {
         padding: 10px;
-
     }
+
+
+
+
+
+
+
+
+
+
 
     /*portfolio query*/
     .portfolioSS {
@@ -255,26 +310,26 @@ footer a{
     }
 
 
+
+
+
+
+
+
+
+
+    
+
+
+
     /*about me media query*/
-
-    .bio {
-         margin: 50px 20px 10px;
-         border: none;
-    }
-
     .socialMediaLinks {
         border: none;
-
     }
 
     .contact {
         border: 1px solid black;
         width: 50%;
         margin: 10px auto;
-    }
-
-    footer {
-        position: relative;
-        top: 50px;
     }
 }
